# dbcompare

./: .gitignore  BUILD_README.md  CHANGELOG.md  CONTRIBUTING.md  DBCompare.desktop  DBCompare.spec  I18N_README.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  app.py  build.py  build_linux.sh  build_macos.sh  build_windows.bat  build_with_spec.py  connection_dialog.py  connections.db  db_connector.py  example.sql  instruction.md  left.sql  main.py  models.py  package.json  pyproject.toml  requirements.txt  right.sql  run_mac.sh  setup.py  sql_generator.py  sql_parser.py  start.bat  start.sh  test_font_manager.py  test_fonts.py  tsconfig.main.json  util.py  (+1 more)
config/: __init__.py  build_config.py  linux_icon_config.py  macos_icon_config.py  windows_icon_config.py
docs/: BUILD_README.md  PYQT_MIGRATION.md  UI_IMPROVEMENTS.md
scripts/: README.md  build_linux.py  build_macos.py  build_windows.py  generate_spec.py  install_desktop.sh
scripts/deploy/: __init__.py  run_mac.sh
src/: __init__.py  main.py
src/core/: db_connector.py  sql_generator.py  sql_parser.py
src/data/: __init__.py  models.py
src/i18n/: __init__.py  en_US.json  i18n_manager.py  zh_CN.json
src/main/: database-manager.js  database-manager.ts  db-connector.js  db-connector.ts  main.js  main.ts  preload.js  preload.ts  sql-generator.js  sql-generator.ts  sql-parser.js  sql-parser.ts  types.ts
src/renderer/: App.tsx  index.css  index.html  main.tsx
src/renderer/components/: ComparisonPanel.tsx  ConnectionDialog.tsx  DataSourcePanel.tsx  SQLModal.tsx
src/renderer/hooks/: useDatabaseAPI.ts
src/ui/: about_dialog.py  connection_dialog.py  font_manager.py  language_dialog.py  styles.py
src/utils/: icon_manager.py  util.py
