[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbcompare"
version = "1.0.0"
description = "MySQL表结构比较工具"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "DBCompare Team", email = "baiyuxiong@gmail.com"}
]
keywords = ["mysql", "database", "compare", "schema", "gui", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt6>=6.4.0",
    "PyQt6-Qt6>=6.4.0",
    "PyQt6-sip>=13.4.0",
    "mysql-connector-python>=8.0.33",
    "sqlparse>=0.4.4",
]

[project.scripts]
dbcompare = "app:main"

[project.urls]
Homepage = "https://github.com/baiyuxiong/dbcompare"
Repository = "https://github.com/baiyuxiong/dbcompare"
Issues = "https://github.com/baiyuxiong/dbcompare/issues"
Documentation = "https://github.com/baiyuxiong/dbcompare#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.py"]
